clusters/apps/default/expenses-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expenses-api-deployment
  namespace: default
  labels:
    app: expenses-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expenses-api-pod
  template:
    metadata:
      labels:
        app: expenses-api-pod
    spec:
      containers:
        - image: ghcr.io/crisszkutnik/expenses-save-api:2.3.2
          imagePullPolicy: IfNotPresent
          name: expenses-api-container
          resources:
            limits:
              memory: "512Mi"
              cpu: 1
          ports:
            - name: grpc
              containerPort: 5000
            - name: http
              containerPort: 3100
