clusters/apps/default/expenses-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expenses-api-service
  namespace: default
  labels:
    app: expenses-api
spec:
  type: NodePort
  selector:
    app: expenses-api-pod
  ports:
    - name: grpc
      port: 5000
      protocol: TCP
      targetPort: 5000
